# reborn-protocol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
reborn_protocol/: __init__.py  codec.py  constants.py  encryption.py
reborn_protocol/gs1/: __init__.py  _tables.py  ast.py  csv.py  interp.py  lexer.py  parser.py  runtime.py  values.py
reborn_protocol/gs2/: __init__.py  container.py  disasm.py  opcodes.py  values.py  vm.py
tests/: gs1_oracle_corpus.cases  test_gs1_csv.py  test_gs1_interp_bugfixes.py  test_gs1_new_builtins.py  test_gs1_oracle.py  test_gs1_sleep_resume.py  test_gs2_compiler.py  test_gs2_disasm.py  test_gs2_sleep_resume.py  test_gs2_vm.py  test_properties.py  test_security_fixes.py
tests/fixtures/gs2/vm/: 01_arith.gs2  01_arith.gs2bc  02_strings.gs2  02_strings.gs2bc  03_control.gs2  03_control.gs2bc  04_arrays.gs2  04_arrays.gs2bc  05_functions.gs2  05_functions.gs2bc  06_objects.gs2  06_objects.gs2bc
tests/tools/: OracleMain.cpp  README.md  build_gs2test.sh
